refactor: Melhorando lógica, redirecionamentos e configs